--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "anthropic>=0.40.0",
     "google-cloud-bigquery>=3.25.0",
+    "google-cloud-bigquery-storage>=2.25.0",
     "pyarrow>=17.0.0",
     "python-dotenv>=1.0.0",
     "pyyaml>=6.0.0",
